--- a/index.html
+++ b/index.html
@@ -5,14 +5,22 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/custom.css" /> <!-- Custom Styles -->
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
 <body class="is-preload landing">
     <div id="page-wrapper">
         
-        <!-- Header -->
-        <header id="header">
+        <!-- Header with Floating Navigation -->
+        <header id="header" class="floating-nav">
             <h1 id="logo"><a href="index.html">Tech Titans</a></h1>
+            <nav id="nav">
+                <ul>
+                    <li><a href="#banner">Home</a></li>
+                    <li><a href="#applications">Our Apps</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
         </header>
 
         <!-- Banner -->
@@ -23,7 +31,7 @@
                     <p>Your gateway to cutting-edge technology and innovation.<br />
                     Explore our solutions and discover how we power the future.</p>
                 </header>
-                <span class="image"><img src="images/pic01.jpg" alt="Tech Titans" /></span>
+                <span class="image animated-background"><img src="images/pic01.jpg" alt="Tech Titans" /></span>
             </div>
         </section>
 
@@ -35,19 +43,35 @@
                     <p>Tech Titans is home to innovative solutions designed for modern challenges.</p>
                 </header>
                 <div class="row gtr-uniform">
-                    <section class="col-6 col-12-medium">
+                    <section class="col-6 col-12-medium app-card">
                         <span class="image fit"><img src="images/pic02.jpg" alt="Conduit Logo" /></span>
                         <h3>Conduit</h3>
                         <p>Conduit is a platform that streamlines workflows and enhances team collaboration with smart automation tools.</p>
-                        <a href="#" class="button">Learn More</a>
+                        <a href="#" class="button hover-effect">Learn More</a>
                     </section>
-                    <section class="col-6 col-12-medium">
+                    <section class="col-6 col-12-medium app-card">
                         <span class="image fit"><img src="images/pic03.jpg" alt="Wager Logo" /></span>
                         <h3>Wager</h3>
                         <p>Wager is an interactive platform that allows users to create and participate in friendly competitive challenges.</p>
-                        <a href="#" class="button">Learn More</a>
+                        <a href="#" class="button hover-effect">Learn More</a>
                     </section>
                 </div>
+            </div>
+        </section>
+
+        <!-- Contact Section -->
+        <section id="contact" class="wrapper style2 special">
+            <div class="container">
+                <header>
+                    <h2>Stay Updated</h2>
+                    <p>Sign up to receive updates about our latest innovations and releases.</p>
+                </header>
+                <form method="post" action="#" class="cta">
+                    <div class="row gtr-uniform gtr-50">
+                        <div class="col-8 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Your Email Address" required /></div>
+                        <div class="col-4 col-12-xsmall"><input type="submit" value="Subscribe" class="fit primary" /></div>
+                    </div>
+                </form>
             </div>
         </section>
 
@@ -65,12 +89,12 @@
                 <li>&copy; Tech Titans. All rights reserved.</li>
             </ul>
         </footer>
-
     </div>
 
     <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/custom.js"></script> <!-- Custom JS -->
 </body>
 </html>
