--- a/index.html
+++ b/index.html
@@ -66,24 +66,29 @@
                     <h2>Stay Updated</h2>
                     <p>Sign up to receive updates about our latest innovations and releases.</p>
                 </header>
-                <form method="post" action="#" class="cta">
+                <form id="subscribeForm" class="cta">
                     <div class="row gtr-uniform gtr-50">
-                        <div class="col-8 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Your Email Address" required /></div>
-                        <div class="col-4 col-12-xsmall"><input type="submit" value="Subscribe" class="fit primary" /></div>
+                        <div class="col-8 col-12-xsmall">
+                            <input type="email" id="email" name="entry.254437408" placeholder="Your Email Address" required />
+                        </div>
+                        <div class="col-4 col-12-xsmall">
+                            <input type="submit" class="fit primary" value="Subscribe">
+                        </div>
                     </div>
                 </form>
+                <p id="subscribeMessage" style="color:white; margin-top:10px;"></p>
             </div>
         </section>
 
         <!-- Footer -->
         <footer id="footer">
             <ul class="icons">
-                <li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-                <li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-                <li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-                <li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-                <li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-                <li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+                <li><a href="#" class="icon brands alt fa-twitter"></a></li>
+                <li><a href="#" class="icon brands alt fa-facebook-f"></a></li>
+                <li><a href="#" class="icon brands alt fa-linkedin-in"></a></li>
+                <li><a href="#" class="icon brands alt fa-instagram"></a></li>
+                <li><a href="#" class="icon brands alt fa-github"></a></li>
+                <li><a href="#" class="icon solid alt fa-envelope"></a></li>
             </ul>
             <ul class="copyright">
                 <li>&copy; Tech Titans. All rights reserved.</li>
@@ -91,9 +96,12 @@
         </footer>
     </div>
 
-    <!-- Scripts -->
+    <!-- Scripts: Correct Load Order -->
     <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.scrolly.min.js"></script>
+    <script src="assets/js/jquery.dropotron.min.js"></script>
     <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
     <script src="assets/js/main.js"></script>
     <script src="assets/js/custom.js"></script> <!-- Custom JS -->
 </body>
