Fix subscription form delay, improve thank you message styling, and reset scroll on refresh

--- a/index.html
+++ b/index.html
@@ -105,4 +105,12 @@
     <script src="assets/js/main.js"></script>
     <script src="assets/js/custom.js"></script> <!-- Custom JS -->
 </body>
+<script>
+    window.onload = function () {
+        setTimeout(() => {
+            window.scrollTo({ top: 0, behavior: "smooth" });
+        }, 50);
+    };
+</script>
+
 </html>
